@@ -7,6 +7,7 @@ from django.contrib.admin.templatetags.admin_list import ResultList, result_head
 from django.contrib.admin.utils import display_for_field, display_for_value, lookup_field
 from django.core.exceptions import ObjectDoesNotExist
 from django.db import models
+from django.forms.utils import flatatt
 from django.template import Library
 from django.template.loader import get_template
 from django.utils.encoding import force_text
@@ -74,10 +75,8 @@ def items_for_result(view, result):
         row_attrs_dict = modeladmin.get_extra_attrs_for_field_col(
             field_name, result)
         row_attrs_dict['class'] = ' ' . join(row_classes)
-        row_attrs = ''.join(
-            ' %s="%s"' % (key, val) for key, val in row_attrs_dict.items())
-        row_attrs_safe = mark_safe(row_attrs)
-        yield format_html('<td{}>{}</td>', row_attrs_safe, result_repr)
+        row_attrs = flatatt(row_attrs_dict)
+        yield format_html('<td{}>{}</td>', row_attrs, result_repr)
 
 
 def results(view, object_list):
@@ -156,8 +155,17 @@ def admin_list_filter(view, spec):
 def result_row_display(context, index):
     obj = context['object_list'][index]
     view = context['view']
+    row_attrs_dict = view.model_admin.get_extra_attrs_for_row(obj, context)
+    row_attrs_dict['data-object-pk'] = obj.pk
+    odd_or_even = 'odd' if (index % 2 == 0) else 'even'
+    if 'class' in row_attrs_dict:
+        row_attrs_dict['class'] += ' %s' % odd_or_even
+    else:
+        row_attrs_dict['class'] = odd_or_even
+
     context.update({
         'obj': obj,
+        'row_attrs': mark_safe(flatatt(row_attrs_dict)),
         'action_buttons': view.get_buttons_for_obj(obj),
     })
     return context
